<resources>
    <string name="app_name">Sims School</string>


    <string name="fragment_login_logo_description">Logo</string>
    <string name="fragment_login_button_text">ENTER</string>

    <string name="fragment_home_profile_rm">RM:</string>
    <string name="fragment_home_profile_class">Class:</string>
    <string name="fragment_home_change_profile_camera">Camera</string>
    <string name="fragment_home_change_profile_gallery">Gallery</string>
    <string name="fragment_home_change_profile_close">Close</string>
    <string name="view_home_classes_no_class">There is no class today</string>
    <string name="view_home_classes_container_message_error">It was not possible to get classes</string>
    <string name="view_home_ads_message_error">It was not possible to ads</string>

    <string name="view_scores_error">It was not possible to get the scores</string>
    <string name="view_scores_semesters_circle_name">SEM.</string>
    <string name="view_scores_card_average">Average</string>
    <string name="view_scores_card_skips">Skips</string>
    <string name="view_scores_card_av1">AV1</string>
    <string name="view_scores_card_av2">AV2</string>
    <string name="view_scores_card_situation">Situation</string>

    <string name="modal_week_calendar_tasks_day_off">Enjoy your day off</string>

    <string name="view_calendar_error">It was not possible to get the calendar</string>

    <string name="view_tips_error_message">It was not possible to get the tips</string>
    <string name="view_modal_medias_item_footer">Open</string>
    <string name="view_modal_media_error_message">It was not possible to get the media</string>

    <string name="view_menu_item_tile">Options</string>
    <string name="view_menu_item_share">Share</string>
    <string name="view_menu_item_maps">Maps</string>
    <string name="view_menu_item_logout">Logout</string>

    <string name="view_maps_title">Location</string>

    <string name="view_error_message">Check your internet connection and try again!</string>
    <string name="view_error_button_text">Try Again</string>

    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_scores">Scores</string>
    <string name="bottom_navigation_classes">Classes</string>
    <string name="bottom_navigation_tips">Tips</string>
    <string name="bottom_navigation_menu">Menu</string>

    <string name="toolbar_menu">menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
