<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="screens.logged.home.components.HomeChangePictureFragment"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/fragment_home_change_picture_camera"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_action_camera"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:paddingHorizontal="10dp"
            android:text="@string/fragment_home_change_profile_camera" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_home_change_picture_gallery"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_action_gallery"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:paddingHorizontal="10dp"
            android:text="@string/fragment_home_change_profile_gallery" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginVertical="10dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/fragment_home_change_picture_close"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_action_close"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:paddingHorizontal="10dp"
            android:text="@string/fragment_home_change_profile_close" />
    </LinearLayout>


</LinearLayout>